--- a/Sales-UI/www/js/templates/headerNav.html
+++ b/Sales-UI/www/js/templates/headerNav.html
@@ -1,9 +1,11 @@
 <div>
     <span class="navbar-lines">&#9776;</span>
     <div class="nav">
-        <span class="cross">&#x2717;</span>
-        <a href="#" class="">Home</a>
-        <a href="#">Item 2</a>
-        <a href="#">About</a>
+        <a href="#" class="closeBtn">&times;</a>
+        <ul>
+        <a href="#" class=""><li>Home</li></a>
+        <a href="#"><li>Item 2</li></a>
+        <a href="#"><li>About</li></a>
+        </ul>
     </div>
 </div>
