--- a/Sales-UI/www/js/templates/login.html
+++ b/Sales-UI/www/js/templates/login.html
@@ -6,7 +6,7 @@
         <form class="form">
             <input type="text" id="username" class="username" placeholder="Username" required autofocus>
             <input type="password" id="password" class="password" placeholder="Password" required>
-            <input type="submit" id="login-btn" id="login-btn" class="login" value="Login">
+            <input type="submit" id="login-btn" class="login" value="Login">
         </form>
         <p id="new-user">New user? <a href="#" class="registerLink">Create an account.</a></p>
     </div>
