--- a/Sales-UI/www/js/templates/login.html
+++ b/Sales-UI/www/js/templates/login.html
@@ -4,9 +4,9 @@
 
     <div class="show-at-middle">
         <form class="form">
-            <input type="text" id="username" class="username" placeholder="Username" required autofocus>
-            <input type="password" id="password" class="password" placeholder="Password" required>
-            <input type="submit" id="login-btn" class="login" value="Login">
+            <input type="text" id="username" class="username login-style" placeholder="Username" required autofocus>
+            <input type="password" id="password" class="password login-style" placeholder="Password" required>
+            <input type="submit" id="login-btn" class="btn login" value="Login">
         </form>
         <p id="new-user">New user? <a href="#" class="registerLink">Create an account.</a></p>
     </div>
