--- a/Sales-UI/www/js/templates/register.html
+++ b/Sales-UI/www/js/templates/register.html
@@ -2,12 +2,12 @@
     <h1 class="page-header">Register</h1>
     <div class="show-at-middle">
         <form class="form">
-            <input type="text" id="firstName" class="firstName" placeholder="First name" required>
-            <input type="text" id="lastName" class="lastName" placeholder="Last name" required>
-            <input type="text" id="mobileNumber" class="mobileNumber" placeholder="Mobile number" required>
-            <input type="text" id="mobileNumber-reEnter" class="mobileNumber" placeholder="Re-enter mobile number" required>
-            <input type="text" id="password" class="password" placeholder="Password" required>
-            <input type="submit" id="register-btn" class="register" value="Register">
+            <input type="text" id="firstName" class="firstName register-style" placeholder="First name" required>
+            <input type="text" id="lastName" class="lastName register-style" placeholder="Last name" required>
+            <input type="text" id="mobileNumber" class="mobileNumber register-style" placeholder="Mobile number" required>
+            <input type="text" id="mobileNumber-reEnter" class="mobileNumber register-style" placeholder="Re-enter mobile number" required>
+            <input type="password" id="password-register" class="password-register register-style" placeholder="Password" required>
+            <input type="submit" id="register-btn" class="btn register" value="Register">
         </form>
     </div>
 </div>
