--- a/Sales-UI/www/js/templates/register.html
+++ b/Sales-UI/www/js/templates/register.html
@@ -4,6 +4,7 @@
         <form class="form">
             <input type="text" id="firstName" class="firstName register-style" placeholder="First name" required>
             <input type="text" id="lastName" class="lastName register-style" placeholder="Last name" required>
+            <input type="email" id="userEmail" class="userEmail register-style" placeholder="Email Id" required>
             <input type="text" id="mobileNumber" class="mobileNumber register-style" placeholder="Mobile number" required>
             <input type="text" id="mobileNumber-reEnter" class="mobileNumber register-style" placeholder="Re-enter mobile number" required>
             <input type="password" id="password-register" class="password-register register-style" placeholder="Password" required>
