--- a/Sales-UI/www/js/templates/login.html
+++ b/Sales-UI/www/js/templates/login.html
@@ -8,6 +8,6 @@
             <input type="password" id="password" class="password login-style" placeholder="Password" required>
             <input type="submit" id="login-btn" class="btn login" value="Login">
         </form>
-        <p id="new-user">New user? <a href="#" class="registerLink">Create an account.</a></p>
+        <p id="new-user">New user? <a href="#Register" class="registerLink">Create an account.</a></p>
     </div>
 </div>
