--- a/Sales-UI/www/js/templates/headerNav.html
+++ b/Sales-UI/www/js/templates/headerNav.html
@@ -3,9 +3,10 @@
     <div class="nav">
         <a href="#" class="closeBtn">&times;</a>
         <ul>
-        <a href="#" class=""><li>Home</li></a>
-        <a href="#"><li>Item 2</li></a>
-        <a href="#"><li>About</li></a>
+        <a href="#home" class="homeLink"><li>Home</li></a>
+        <a href="#create" class="createEventLink"><li>Create Event</li></a>
+        <a href="#listEvents" class="lsitEventsLink"><li>List Events</li></a>
+        <a href="#about" class="aboutLink"><li>About</li></a>
         </ul>
     </div>
 </div>
