--- a/Sales-UI/www/css/style.css
+++ b/Sales-UI/www/css/style.css
@@ -5,6 +5,7 @@ body {}
     font-family: sans-serif;
 }
 
+
 /*
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
@@ -17,6 +18,7 @@ input[type=number] {
 }
 
 */
+
 a:visited {
     color: blue;
 }
@@ -47,6 +49,17 @@ a:visited {
 
 #register-confirm-page .page-header {
     margin-left: -99px;
+}
+
+#create-event-page .page-header {
+    margin-left: -131px;
+}
+
+#create-event-page p {
+/*    font-size: .9em;*/
+    text-align: center;
+/*    margin-top: 5px;*/
+    margin-bottom: 5px;
 }
 
 ::-webkit-input-placeholder {
@@ -171,19 +184,23 @@ a {
     top: 40%;
 }
 
+#create-event-page .show-at-middle {
+    top: 35%;
+}
+
 p#new-user {
     margin-top: 10px;
     position: absolute;
     right: 0;
 }
 
-input:focus {
+input:focus, textarea {
     outline: none;
 }
 
 .register-style,
 .login-style,
-event-style {
+.event-style {
     border-radius: 0;
     border: 0;
     width: 271px;
@@ -205,7 +222,7 @@ event-style {
 }
 
 .register-style:focus,
-event-style:focus {
+.event-style:focus {
     border-bottom: 1px solid #888;
 }
 
@@ -225,7 +242,8 @@ event-style:focus {
 }
 
 #register-btn,
-#confirm-btn {
+#confirm-btn,
+#create-event-btn {
     border: 1px solid #888;
 }
 
@@ -234,7 +252,8 @@ textarea {
 }
 
 #register-btn:hover,
-#confirm-btn:hover {
+#confirm-btn:hover,
+#create-event-btn:hover {
     transition: .3s linear;
     background: #DDD;
 }
