--- a/Sales-UI/www/js/templates/createEvent.html
+++ b/Sales-UI/www/js/templates/createEvent.html
@@ -1,15 +1,14 @@
-<div id="create-event">
+<div id="create-event-page">
     <h1 class="page-header">Create your event!</h1>
     <div class="show-at-middle">
         <form class="form">
             <input type="text" id="eventName" class="eventName event-style" placeholder="Name of your event">
             <textarea type="text" id="eventDescription" class="eventDescription event-style" placeholder="Describe your event"></textarea>
-            <input type="text">
             <input type="text" id="amount" class="amount event-style" placeholder="Amount">
             <input type="text" id="comission" class="comission event-style" placeholder="Comission for seller">
-            <p>And that's just it!</p>
-            <p>Press Create and you are done with it.</p>
-            <input type="submit" id="create-event" class="btn create" value="Create">
+<!--            <p>And that's just it!</p>-->
+            <p>Press Create, and that's just it.</p>
+            <input type="submit" id="create-event-btn" class="btn create" value="Create">
         </form>
     </div>
 </div>
