--- a/Sales-UI/www/css/style.css
+++ b/Sales-UI/www/css/style.css
@@ -40,7 +40,7 @@ a:visited {
 }
 
 #register-page .page-header {
-    margin-left: -60px;
+    margin-left: -59.5px;
 }
 
 #login-page .page-header {
@@ -56,9 +56,7 @@ a:visited {
 }
 
 #create-event-page p {
-/*    font-size: .9em;*/
     text-align: center;
-/*    margin-top: 5px;*/
     margin-bottom: 5px;
 }
 
@@ -99,6 +97,7 @@ a {
     position: fixed;
     z-index: 1;
     top: 0;
+    bottom: 0;
     left: -300px;
     background: rgba(0, 0, 0, 0.9);
     overflow-x: hidden;
@@ -185,7 +184,7 @@ a {
 }
 
 #create-event-page .show-at-middle {
-    top: 35%;
+    top: 40%;
 }
 
 p#new-user {
@@ -194,7 +193,8 @@ p#new-user {
     right: 0;
 }
 
-input:focus, textarea {
+input:focus,
+textarea {
     outline: none;
 }
 
@@ -256,4 +256,31 @@ textarea {
 #create-event-btn:hover {
     transition: .3s linear;
     background: #DDD;
+}
+
+@media (max-height: 350px) {
+    #login-page {
+        height: 300px;
+    }
+    #login-page .show-at-middle {
+        top: 175px;
+    }
+}
+
+@media(max-height: 450px) {
+    #register-page {
+        height: 420px;
+    }
+    #register-page .show-at-middle {
+        top: 175px;
+    }
+}
+
+@media (max-height: 500px) {
+    #create-event-page {
+        height: 470px;
+    }
+    #create-event-page .show-at-middle {
+        top: 200px;
+    }
 }
