--- a/Sales-UI/www/js/templates/register.html
+++ b/Sales-UI/www/js/templates/register.html
@@ -6,7 +6,7 @@
             <input type="text" id="lastName" class="lastName register-style" placeholder="Last name" required>
             <input type="email" id="userEmail" class="userEmail register-style" placeholder="Email Id" required>
             <input type="text" id="mobileNumber" class="mobileNumber register-style" placeholder="Mobile number" required>
-            <input type="password" id="password-register" class="password-register register-style" placeholder="Password" required>
+            <input type="password" id="password" class="password register-style" placeholder="Password" required>
             <input type="submit" id="register-btn" class="btn register" value="Register">
         </form>
     </div>
